--- a/index.html
+++ b/index.html
@@ -1544,164 +1544,56 @@
       </style>
 
       <!--projects-->
-      <div class="sectionproo" style="background-color: #4d4c4c">
-        <div class="left">
-          <span
-            class="text-white"
-            data-aos="fade-right"
-            data-aos-duration="2000"
-            >Projects</span
-          >
-        </div>
-        <div class="right">
-          <!-- First Container: Bottom to Top Scroll -->
-          <div class="container" data-aos="fade-right" data-aos-duration="2000">
-            <div class="scroll-images">
-              <a
-                href="sr-interior-images/wardrobes/AP1GczMHfxd6BWiUzW4eK5taB6I6AIWk.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/wardrobes/AP1GczMHfxd6BWiUzW4eK5taB6I6AIWk.webp"
-                  alt="home interior renovation in Hyderabad"
-              /></a>
-              <a
-                href="sr-interior-images/pooja-room/pooja1.jpg"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/pooja-room/pooja1.jpg"
-                  alt="Interior Designers in Nallagandla"
-              /></a>
-              <a
-                href="sr-interior-images/kitchens/AP1GczNCj826s2jeEnkPhCAun5m5Fsmu.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/kitchens/AP1GczNCj826s2jeEnkPhCAun5m5Fsmu.webp"
-                  alt="Interior Designers in Nallagandla"
-              /></a>
-              <a
-                href="sr-interior-images/tvunits/AP1GczOghs-fSTT3Vpr_ywk7IOx4WwGU.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/tvunits/AP1GczOghs-fSTT3Vpr_ywk7IOx4WwGU.webp"
-                  alt="Top Home Interior Designers in Nallagandla"
-              /></a>
-              <a
-                href="sr-interior-images/bedroom/AP1GczP_TRdMDje-wPM2GxHmkg39scEw.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/bedroom/AP1GczP_TRdMDje-wPM2GxHmkg39scEw.webp"
-                  alt="top-rated interior designers in Kokapet"
-              /></a>
-              <a
-                href="sr-interior-images/kitchens/AP1GczMdCim8Pd4Ee6llhereWOUK7E3o.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/kitchens/AP1GczMdCim8Pd4Ee6llhereWOUK7E3o.webp"
-                  alt="premium residential interiors in Telangana"
-              /></a>
-              <a
-                href="sr-interior-images/living-room/AP1GczNgMrSYt5olHrf1uDUKGcCKed3z.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/living-room/AP1GczNgMrSYt5olHrf1uDUKGcCKed3z.webp"
-                  alt="Best Interior Designers in Nallagandla, Hyderabad"
-              /></a>
-            </div>
+      <!--projects--> 
+<div class="sectionproo" style="background-color: #4d4c4c;">
+  <div class="left">
+      <span class="text-white" data-aos="fade-right" data-aos-duration="2000">PROJECTS</span>
+  </div>
+  <div class="right">
+      <!-- First Container: Bottom to Top Scroll -->
+      <div class="container" data-aos="fade-right" data-aos-duration="2000">
+          <div class=" owl-carousel up-carousel" >
+            <a href="sr-interior-images/wardrobes/AP1GczMHfxd6BWiUzW4eK5taB6I6AIWk.webp" data-lightbox="mygallery" data-title="Image 1" >
+              <img src="sr-interior-images/wardrobes/AP1GczMHfxd6BWiUzW4eK5taB6I6AIWk.webp" alt="home interior renovation in Hyderabad"></a>
+              <a href="sr-interior-images/pooja-room/pooja1.jpg" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/pooja-room/pooja1.jpg" alt="Interior Designers in Nallagandla"></a>
+              <a href="sr-interior-images/kitchens/AP1GczNCj826s2jeEnkPhCAun5m5Fsmu.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/kitchens/AP1GczNCj826s2jeEnkPhCAun5m5Fsmu.webp" alt="Interior Designers in Nallagandla"></a>
+              <a href="sr-interior-images/tvunits/AP1GczOghs-fSTT3Vpr_ywk7IOx4WwGU.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/tvunits/AP1GczOghs-fSTT3Vpr_ywk7IOx4WwGU.webp" alt="Top Home Interior Designers in Nallagandla"></a>
+              <a href="sr-interior-images/bedroom/AP1GczP_TRdMDje-wPM2GxHmkg39scEw.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/bedroom/AP1GczP_TRdMDje-wPM2GxHmkg39scEw.webp" alt="top-rated interior designers in Kokapet"></a>
+              <a href="sr-interior-images/kitchens/AP1GczMdCim8Pd4Ee6llhereWOUK7E3o.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/kitchens/AP1GczMdCim8Pd4Ee6llhereWOUK7E3o.webp" alt="premium residential interiors in Telangana"></a>
+              <a href="sr-interior-images/living-room/AP1GczNgMrSYt5olHrf1uDUKGcCKed3z.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/living-room/AP1GczNgMrSYt5olHrf1uDUKGcCKed3z.webp" alt="Best Interior Designers in Nallagandla, Hyderabad"></a>
           </div>
-          <!-- Second Container: Top to Bottom Scroll -->
-          <div class="container" data-aos="fade-left" data-aos-duration="2000">
-            <div class="scroll-images scroll-up">
-              <a
-                href="sr-interior-images/bedroom/AP1GczMASJrxiDJz__vXVTTAc9BlDiL5.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/bedroom/AP1GczMASJrxiDJz__vXVTTAc9BlDiL5.webp"
-                  alt="commercial interior designers in Hyderabad"
-              /></a>
-              <a
-                href="sr-interior-images/living-room/AP1GczNO8Uk64gwn_bwU1OVT6TP1Xm24.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/living-room/AP1GczNO8Uk64gwn_bwU1OVT6TP1Xm24.webp"
-                  alt="top-rated interior designers in Kokapet"
-              /></a>
-              <a
-                href="sr-interior-images/kitchens/AP1GczNKu7XTVO9-9mlqPG2kHwFI5Ebb.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/kitchens/AP1GczNKu7XTVO9-9mlqPG2kHwFI5Ebb.webp"
-                  alt="home interior renovation in Hyderabad"
-              /></a>
-              <a
-                href="sr-interior-images/living-room/AP1GczOHi-McB6-0Ta4tVEq7vn2_cR2k.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/living-room/AP1GczOHi-McB6-0Ta4tVEq7vn2_cR2k.webp"
-                  alt="residential interiors in Kokapet"
-              /></a>
-              <a
-                href="sr-interior-images/tvunits/AP1GczMiqEHTALh0xhdhCs_myDYlwden.webp"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="sr-interior-images/tvunits/AP1GczMiqEHTALh0xhdhCs_myDYlwden.webp"
-                  alt="Top Home Interior Designers in Nallagandla"
-              /></a>
-              <a
-                href="images/wordrobes/1.png"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="images/wordrobes/1.png"
-                  alt="Best Interior Designers in Nallagandla, Hyderabad"
-              /></a>
-              <a
-                href="images/residence/kitchensss/23.png"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="images/residence/kitchensss/23.png"
-                  alt="Top Home Interior Designers in Nallagandla"
-              /></a>
-              <a
-                href="images/wordrobes/21.png"
-                data-lightbox="mygallery"
-                data-title="Image 1"
-              >
-                <img
-                  src="images/wordrobes/21.png"
-                  alt="Best Interior Designers in Nallagandla, Hyderabad"
-              /></a>
-            </div>
-          </div>
-        </div>
-        <!-- Buttons Section -->
       </div>
+      <!-- Second Container: Top to Bottom Scroll -->
+      <div class="container" data-aos="fade-left" data-aos-duration="2000">
+          <div class="owl-carousel up-carousel">
+            <a href="sr-interior-images/bedroom/AP1GczMASJrxiDJz__vXVTTAc9BlDiL5.webp" data-lightbox="mygallery" data-title="Image 1">
+               <img src="sr-interior-images/bedroom/AP1GczMASJrxiDJz__vXVTTAc9BlDiL5.webp" alt="commercial interior designers in Hyderabad"></a>
+              <a href="sr-interior-images/living-room/AP1GczNO8Uk64gwn_bwU1OVT6TP1Xm24.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/living-room/AP1GczNO8Uk64gwn_bwU1OVT6TP1Xm24.webp"  alt="top-rated interior designers in Kokapet"></a>
+              <a href="sr-interior-images/kitchens/AP1GczNKu7XTVO9-9mlqPG2kHwFI5Ebb.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/kitchens/AP1GczNKu7XTVO9-9mlqPG2kHwFI5Ebb.webp" alt="home interior renovation in Hyderabad"></a>
+              <a href="sr-interior-images/living-room/AP1GczOHi-McB6-0Ta4tVEq7vn2_cR2k.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/living-room/AP1GczOHi-McB6-0Ta4tVEq7vn2_cR2k.webp" alt="residential interiors in Kokapet"></a>
+              <a href="sr-interior-images/tvunits/AP1GczMiqEHTALh0xhdhCs_myDYlwden.webp" data-lightbox="mygallery" data-title="Image 1">
+              <img src="sr-interior-images/tvunits/AP1GczMiqEHTALh0xhdhCs_myDYlwden.webp" alt="Top Home Interior Designers in Nallagandla"></a>
+              <a href="images/wordrobes/1.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/wordrobes/1.png" alt="Best Interior Designers in Nallagandla, Hyderabad"></a>
+              <a href="images/residence/kitchensss/23.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/residence/kitchensss/23.png" alt="Top Home Interior Designers in Nallagandla"></a>
+              <a href="images/wordrobes/21.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/wordrobes/21.png" alt="Best Interior Designers in Nallagandla, Hyderabad"></a>
+          </div>
+      </div>
+  </div>
+  <!-- Buttons Section -->
+  
+</div>
 
       <style>
         .sectionproo {
@@ -1731,9 +1623,10 @@
           position: relative;
           z-index: 2;
         }
-        .container {
+        .sectionproo .container {
           width: 100%;
           /* height: 700px; */
+          height: 100vh;
           overflow: hidden;
           position: relative;
         }
@@ -1743,13 +1636,57 @@
           position: absolute;
           animation: scroll 10s linear infinite;
         }
-        .scroll-images img {
-          width: 500px;
-          height: 500px;
+        .owl-carousel.up-carousel img {
+          width: 500px !important;
+          height: 400px !important;
           margin-bottom: 10px;
           border-radius: 8px;
           object-fit: cover;
         }
+        /* Ensuring the carousel container supports vertical layout */
+.owl-carousel.up-carousel .owl-stage {
+  display: flex;
+  flex-direction: column; /* Arrange items vertically */
+  overflow: hidden;
+}
+
+.owl-carousel.up-carousel .owl-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Custom animations for up-to-down scrolling */
+.owl-carousel.up-carousel .slideOutDown {
+  animation: slide-out-down 1.5s ease-in-out forwards;
+}
+
+.owl-carousel.up-carousel .slideInDown {
+  animation: slide-in-down 1.5s ease-in-out forwards;
+}
+
+@keyframes slide-out-down {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+}
+
+@keyframes slide-in-down {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
         .scroll-images.scroll-up {
           animation: scroll-up 10s linear infinite;
         }
@@ -1808,14 +1745,14 @@
 
           .container {
             width: 100%; /* Make containers full width */
-            height: 400px; /* Adjust height for mobile */
+            /* height: 400px;  */
           }
 
           .scroll-images img {
-            width: 100%; /* Images take full width of the container */
-            height: auto; /* Automatically adjust height to maintain aspect ratio */
+            width: 100%  !important; /* Images take full width of the container */
+            height: 300px !important;
             border-radius: 8px;
-            object-fit: cover; /* Ensures the image is properly cropped */
+            object-fit:cover !important; /* Ensures the image is properly cropped */
           }
 
           .sectionproo::before {
@@ -2713,6 +2650,7 @@
           <div class="content">
             <div class="reviews-section p-3 my-5">
               <div class="reviews-wrapper">
+
                 <div class="testi-carousel owl-carousel" id="reviews">
                   <div class="review-item review-background">
                     <h4 class="reviewer-name text-white">
